# cgal2itk

./: .gitignore  CMakeLists.txt  README.md
include/: itkMesh2Polyhedron_3.h
tests/: CMakeLists.txt  itkImage2CGALImage.cxx  itkImage2CGALImage3.h  itkMesh2CGALMesh.cxx
